Added test and rebased

--- a/test/testcases/test-transform-primitives.html
+++ b/test/testcases/test-transform-primitives.html
@@ -32,7 +32,7 @@ limitations under the License.
 }
 </style>
 <div></div>
-<div style="height: 550px;"></div>
+<div style="height: 600px;"></div>
 <script src="../bootstrap.js"></script>
 <script>
 "use strict";
@@ -44,7 +44,8 @@ var transformValues = [
   ['rotate(0deg)', 'rotate(50deg)'],
   ['skew(0deg)', 'skew(20deg)', 'skew(40deg, 20deg)'],
   ['skewX(0deg)', 'skewX(40deg)'],
-  ['skewY(0deg)', 'skewY(40deg)']
+  ['skewY(0deg)', 'skewY(40deg)'],
+  ['matrix(1, 0, 0, 1, 0, 0)', 'matrix(-1, 1, -1, -1, 10, 10)'],
 ];
 
 var separation_x = 100;
