Updated test case

--- a/test/testcases/test-initial.html
+++ b/test/testcases/test-initial.html
@@ -29,7 +29,7 @@ td {
 
 <table id="test"><tr><td>Initial test initial test initial test initial test initial test initial test initial test initial test initial test initial test initial test.</td><td>Initial test.</td></tr></table>
 
-<script src="../../web-animations.js"></script>
+<script src="../bootstrap.js"></script>
 <script>
 "use strict";
 
