Updated test case (still broken)

--- a/test/testcases/test-initial.html
+++ b/test/testcases/test-initial.html
@@ -17,7 +17,7 @@ limitations under the License.
 <!DOCTYPE html>
 
 <style>
-#test {
+.anim {
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAAXNSR0IArs4c6QAAAAZiS0dEAP8A/wD/oL2nkwAAAAlwSFlzAAALEwAACxMBAJqcGAAAAAd0SU1FB90HCAs5M6jhUuMAAAAZdEVYdENvbW1lbnQAQ3JlYXRlZCB3aXRoIEdJTVBXgQ4XAAAANUlEQVQY02NkYGD4z0AEYEHjM6Lx4YYw4VGEIUaM1f+ZGIgEtFOIz53/0U38j0sRzPtEBTgAb9gJDSeG6FIAAAAASUVORK5CYII=);
   border-style: solid;
   outline-style: groove;
@@ -27,14 +27,14 @@ td {
 }
 </style>
 
-<table id="test"><tr><td>Initial test initial test initial test initial test initial test initial test initial test initial test initial test initial test initial test.</td><td>Initial test.</td></tr></table>
+<table class="anim"><tr><td>Initial test initial test initial test initial test initial test initial test initial test initial test initial test initial test initial test.</td><td>Initial test.</td></tr></table>
 
 <script src="../bootstrap.js"></script>
 <script>
 "use strict";
 
 
-document.timeline.play(new Animation(document.querySelector('#test'), [
+document.timeline.play(new Animation(document.querySelector('.anim'), [
   {
     backgroundColor: 'initial',
     backgroundPosition: 'initial',
@@ -116,9 +116,9 @@ document.timeline.play(new Animation(document.querySelector('#test'), [
     paddingTop: '50px',
     textIndent: '50px',
     textShadow: '10px 10px 50px lime',
-    transform: 'rotate(720deg)',
+    transform: 'rotate(360deg)',
     verticalAlign: '50px',
     wordSpacing: '100px',
-  }], 10));
+  }], 4));
 
 </script>
