--- a/test/testcases/test-calc.html
+++ b/test/testcases/test-calc.html
@@ -38,7 +38,7 @@ limitations under the License.
 }
 
 #d {
-  width: calc(25px + 12.5%);
+  width: -webkit-calc(25px + 12.5%);
   top: 150px;
 }
 
@@ -53,7 +53,7 @@ limitations under the License.
 }
 
 #g {
-  width: calc(100px - 25%);
+  width: -webkit-calc(100px - 25%);
   top: 300px;
 }
 
@@ -131,12 +131,12 @@ dt.play(new Animation(document.querySelector("#c"),
 dt.play(new Animation(document.querySelector("#d"), {width: "50%"}, 2));
 // 50px -> 100px linear, 0% -> 37.5% (0px -> 300px quadratic)
 dt.play(new Animation(document.querySelector("#e"),
-    {width: "calc(37.5% + 100px)"}, 2));
+    {width: "-webkit-calc(37.5% + 100px)"}, 2));
 // 0px -> 100px linear, 25% -> 37.5% (50px -> 300px quadratic)
 dt.play(new Animation(document.querySelector("#f"),
-    {width: "calc(37.5% + 100px)"}, 2));
+    {width: "-webkit-calc(37.5% + 100px)"}, 2));
 // 100px -> 100px linear, -25% -> 37.5% (-50px -> 300px quadratic)
 dt.play(new Animation(document.querySelector("#g"),
-    {width: "calc(37.5% + 100px)"}, 2));
+    {width: "-webkit-calc(37.5% + 100px)"}, 2));
 
 </script>
