--- a/test/testcases/test-position-list-type.html
+++ b/test/testcases/test-position-list-type.html
@@ -57,7 +57,7 @@ var endPositions = [
   'right 80% bottom',
   'bottom left 10px',
   'left 40px bottom 160px',
-  'left 20% top 20%'
+  'left 20% top 20%',
 ];
 
 for (var i = 0; i < endPositions.length; i++) {
