--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -70,20 +70,18 @@ tbody.no-tests {
   color: #ff8a00;
 }
 
-
 </style>
 <script src="testcases.js"></script>
 
 <div id=status-box>
 <h1 id=status>Pending</h1>
-Loading: <span id=loading></span>
-Unstarted: <span id=unstarted></span>
-Running: <span id=running></span>
-Posting: <span id=posting></span>
-Finished: <span id=finished></span>
+Loading: <span id=loading></span> (<span id=loaded></span>)
+Running: <span id=running></span> (<span id=finished></span>)
+Posting: <span id=posting></span> (<span id=posted></span>)
 </div>
 
 <table id="results"></table>
+<div id="spacer"></div>
 
 <script>
 'use strict';
@@ -99,6 +97,21 @@ if (/coverage/.test(window.location.hash)) {
   // Share resources loaded by child tests to avoid instrumenting the same
   // source file multiple times.
   window.__resources__ = {original: {}};
+}
+
+window.addEventListener('load', function() {
+  document.querySelector('#spacer').style.height =
+      getComputedStyle(document.querySelector('body')).height;
+});
+
+function trueOffsetTop(element) {
+  var t = 0;
+  if (element.offsetParent) {
+    do {
+      t += element.offsetTop;
+    } while (element = element.offsetParent);
+    return t;
+  }
 }
 
 
@@ -127,16 +140,16 @@ function now() {
  * @return {Element} tbody containing newly created table rows.
  */
 function createTestRows(testName, testURL) {
-  var tablegroup = document.createElement('tbody');
-  tablegroup.id = testName.replace('.', '-');
+  var tableGroup = document.createElement('tbody');
+  tableGroup.id = testName.replace('.', '-');
 
   var basicInfoRow = document.createElement('tr');
   basicInfoRow.className = 'info-row';
-  tablegroup.appendChild(basicInfoRow);
+  tableGroup.appendChild(basicInfoRow);
   var iframeRow = document.createElement('tr');
-  tablegroup.appendChild(iframeRow);
+  tableGroup.appendChild(iframeRow);
   var logRow = document.createElement('tr');
-  tablegroup.appendChild(logRow);
+  tableGroup.appendChild(logRow);
 
   // Name
   var header = document.createElement('h1');
@@ -180,63 +193,40 @@ function createTestRows(testName, testURL) {
   logCell.colSpan = '4';
   logRow.appendChild(logCell);
 
-  basicInfoRow.onclick = function() {
+  tableGroup.showInfo = function() {
+    logRow.style.display = 'table-row';
+    iframeRow.style.display = 'table-row';
+  };
+  tableGroup.hideInfo = function() {
+    logRow.style.display = 'none';
+    iframeRow.style.display = 'none';
+  };
+  tableGroup.toggleInfo = function() {
     if (logRow.style.display == 'none') {
-      logRow.style.display = 'table-row';
-      iframeRow.style.display = 'table-row';
+      tableGroup.showInfo();
     } else {
-      logRow.style.display = 'none';
-      iframeRow.style.display = 'none';
+      tableGroup.hideInfo();
     }
   };
-  basicInfoRow.click();
-  return tablegroup;
-}
+  basicInfoRow.onclick = tableGroup.toggleInfo;
 
-/**
- * Called when a test is started.
- * @param {Element} test dom object representing the test. id will contain the
- *    test name.
- */
-function testStarted(test) {
-  test.start = now();
-}
+  tableGroup.hideInfo();
 
-/**
- * Called when a test is finished.
- * @param {object} test dom object representing the test. id will contain the
- *    test name.
- */
-function testFinished(test) {
-  test.finished = now();
-  test.querySelector('.timing').textContent = (test.finished - test.start).toFixed(2) + 'ms';
+  return tableGroup;
 }
 
 /* @type {?number} */ var intervalId = null;
 
 /**
- * Checks all the tests are in the unstarted state and then kicks of running
+ * Checks all the tests are in the loaded state and then kicks of running
  * the tests.
  */
 function runTestsIfLoaded() {
-  if (loadingTests.length != 0)
+  if (testStates['LOADING'].length > 0)
     return;
 
-  intervalId = window.setInterval(runTests, 10);
-}
-
-/**
- * Checks all the tests are in the finished state and then marks the whole test
- * as finished and stops the periodic javascript functions.
- */
-function haveAllTestsFinished() {
-  if (finishedTests.length != tests.length)
-    return;
-
-  window.clearInterval(intervalId);
-  window.finished = true;
-  if (window.__coverage__) {
-    generateCoverageReport();
+  if (intervalId == null) {
+    intervalId = window.setInterval(runTests, 10);
   }
 }
 
@@ -258,33 +248,27 @@ function generateCoverageReport() {
   }
 }
 
-
 /**
- * These lists show track which state a test is in. An individual test should
- * only ever be in one of the lists. You use the changeTestState() function to
- * move from one state to another.
+ * This object tracks which state a test is in. An individual test should only
+ * ever be in one of the lists. You use the changeTestState() function to move
+ * from one state to another.
  *
- * Tests start off in the loading state, the move downwards until ending up in
+ * Tests start off in the loading state and move downwards until ending up in
  * the finished state.
  */
-/* @type {Array.<Element>} */ var loadingTests = [];
-/* @type {Array.<Element>} */ var unstartedTests = [];
-/* @type {Array.<Element>} */ var runningTests = [];
-/* @type {Array.<Element>} */ var postingTests = [];
-/* @type {Array.<Element>} */ var finishedTests = [];
+var testStates = {};
+testStates['LOADING'] = [];  /* Test which is being loaded. */
+testStates['LOADED'] = [];   /* Test which have yet to start. */
+testStates['RUNNING'] = [];  /* Test that is currently running. */
+testStates['FINISHED'] = []; /* Test that are finished. */
+testStates['POSTING'] = [];  /* Test that is currently posting results to server. */
+testStates['POSTED'] = [];   /* Test which have completed and sent their
+                                results to the server. */
 
 /**
- * Enum for state values.
- * @enum {number}
+ * Track if we should skip the POSTING state, occurs if posting returns an error.
  */
-var States = {
-  LOADING: 1,    /* Test which is being loaded. */
-  UNSTARTED: 2,  /* Test which have yet to start. */
-  RUNNING: 3,    /* Test that is currently running. */
-  POSTING: 4,    /* Test that is currently posting results to server. */
-  FINISHED: 5,   /* Test which has completed. */
-  TIMEOUT: 6,    /* Test which has timed out rather then completed. */
-};
+/* @type {Boolean} */ var skipPosting = false;
 
 /**
  * Changes the state of the given test to the given state.
@@ -297,100 +281,157 @@ var States = {
 function changeTestState(test, newState) {
   var i = null;
 
-  // Remove the test object form all the queues.
-  i = loadingTests.indexOf(test);
-  if (i >= 0) {
-    loadingTests.splice(i, 1);
-  }
-  i = unstartedTests.indexOf(test);
-  if (i >= 0) {
-    unstartedTests.splice(i, 1);
-  }
-  i = runningTests.indexOf(test);
-  if (i >= 0) {
-    runningTests.splice(i, 1);
-    testFinished(test);
-  }
-  i = postingTests.indexOf(test);
-  if (i >= 0) {
-    postingTests.splice(i, 1);
+  if (newState == 'POSTING' && skipPosting) {
+    newState = 'POSTED';
   }
 
-  switch(newState) {
-  case States.LOADING:
-    loadingTests.unshift(test);
-    runTestsIfLoaded();
-    break;
-  case States.UNSTARTED:
-    unstartedTests.unshift(test);
-    break;
-  case States.RUNNING:
-    testStarted(test);
-    runningTests.unshift(test);
-    break;
-  case States.POSTING:
-    postingTests.unshift(test);
-    break;
-  case States.FINISHED:
-  case States.TIMEOUT:
-    finishedTests.unshift(test);
-    break;
+  var oldState = test.state;
+  if (typeof oldState != 'undefined') {
+    var i = testStates[oldState].indexOf(test);
+    testStates[oldState].splice(i, 1);
   }
+
+  test.state = newState;
+  testStates[test.state].unshift(test);
 
   function testSort(a, b) {
     return a.id.localeCompare(b.id);
   }
+  testStates[test.state].sort(testSort);
 
-  // Sort the lists just to be nice and provide a reliable execution order.
-  loadingTests.sort(testSort);
-  unstartedTests.sort(testSort);
-  runningTests.sort(testSort);
-  postingTests.sort(testSort);
+  switch(newState) {
+  case 'LOADING':
+    runTestsIfLoaded();
+    break;
+
+  case 'LOADED':
+    if (oldState != 'LOADING') {
+      throw 'Unexpected state change! ' + oldState + ' changing to LOADED';
+    }
+    break;
+
+  case 'RUNNING':
+    if (oldState != 'LOADED') {
+      throw 'Unexpected state change! ' + oldState + ' changing to RUNNING';
+    }
+
+    test.start = now();
+    var testWindow = test.querySelector('iframe').contentWindow;
+    var msg = {type: 'start', url: testWindow.location.href + ''};
+    testWindow.postMessage(msg, '*');
+    break;
+
+  case 'FINISHED':
+    // If a test doesn't use any timing stuff it could come from the LOADING or
+    // LOADED state into the FINISHED state bypassing the RUNNING state.
+    if (oldState != 'LOADING' && oldState != 'LOADED' && oldState != 'RUNNING') {
+      throw 'Unexpected state change! ' + oldState + ' changing to FINISHED';
+    }
+
+    var timingInfo = test.querySelector('.timing');
+    if (test.start) {
+      test.finished = now();
+      timingInfo.textContent = (test.finished - test.start).toFixed(2) + 'ms';
+    } else {
+      timingInfo.textContent = '(Load only)';
+    }
+
+    processResults(test);
+
+    break;
+
+  case 'POSTING':
+    if (oldState != 'FINISHED') {
+      throw 'Unexpected state change! ' + oldState + ' changing to POSTING';
+    }
+
+    if (test.className == 'fail') {
+      // Open up the window of the failed result
+      test.showInfo();
+      // Scroll to it.
+      window.scroll(0, [trueOffsetTop(test), 0]);
+    }
+
+    // Open the status window for taking of screenshots
+    var data = new FormData();
+    data.append('data', JSON.stringify(test.results_processed));
+
+    var xhr = new XMLHttpRequest();
+    xhr.onload = function (e) {
+      if (e.target.status >= 400) {
+        skipPosting = true;
+      }
+      // Move from running to finished state
+      changeTestState(this, 'POSTED');
+    }.bind(test);
+    xhr.open('POST', 'test-results-post.html', true);
+    xhr.send(data);
+
+    break;
+
+  case 'POSTED':
+    // If we are skipping POSTING, tests can transition straight from FINISHED
+    // state into the POSTED state.
+    if (oldState != 'POSTING' && (!skipPosting || oldState != 'FINISHED')) {
+      throw 'Unexpected state change! ' + oldState + ' changing to POSTED';
+    }
+    break;
+  }
+
+  updateStatus();
 }
 
 /**
  * Elements for reporting the overall status.
  */
 /* @type {Element} */ var statusElement = document.querySelector('#status');
+
 /* @type {Element} */ var loadingElement = document.querySelector('#loading');
-/* @type {Element} */ var unstartedElement = document.querySelector('#unstarted');
+/* @type {Element} */ var loadedElement = document.querySelector('#loaded');
+
 /* @type {Element} */ var runningElement = document.querySelector('#running');
-/* @type {Element} */ var postingElement = document.querySelector('#posting');
 /* @type {Element} */ var finishedElement = document.querySelector('#finished');
 
-/* @type {?number} */ var statusIntervalId = null;
+/* @type {Element} */ var postingElement = document.querySelector('#posting');
+/* @type {Element} */ var postedElement = document.querySelector('#posted');
 
 /**
  * Update the status dialog with information about the current status.
  */
 function updateStatus() {
-  loadingElement.textContent = loadingTests.length;
-  unstartedElement.textContent = unstartedTests.length;
-  runningElement.textContent = runningTests.length;
-  postingElement.textContent = postingTests.length;
-  finishedElement.textContent = finishedTests.length;
+  loadingElement.textContent = testStates['LOADING'].length;
+  loadedElement.textContent = testStates['LOADED'].length;
 
-  if (loadingElement.length > 0) {
+  runningElement.textContent = testStates['RUNNING'].length;
+  finishedElement.textContent = testStates['FINISHED'].length;
+
+  postingElement.textContent = testStates['POSTING'].length;
+  postedElement.textContent = testStates['POSTED'].length;
+
+  if (testStates['LOADED'].length > 0) {
     statusElement.textContent = 'Loading';
-  } else if (runningTests.length > 0) {
+  } else if (testStates['RUNNING'].length > 0) {
     statusElement.textContent = 'Running';
-  } else if (postingTests.length > 0) {
+  } else if (testStates['POSTING'].length > 0) {
     statusElement.textContent = 'Posting results';
-  } else if (finishedTests.length == tests.length) {
+  } else if (testStates['POSTED'].length == tests.length) {
     statusElement.textContent = 'Finished';
-    window.clearInterval(statusIntervalId);
-  }
 
-  haveAllTestsFinished();
+    window.clearInterval(intervalId);
+    window.finished = true;
+    if (window.__coverage__) {
+      generateCoverageReport();
+    }
+  }
 }
 
+
+var testRunners = [];
 
 /**
  * Create the iframes for each test.
  */
 window.onload = function createTestRunners() {
-  statusIntervalId = window.setInterval(updateStatus, 10);
-
   // Filter the tests
   var filter = window.location.href.split('?')[1];
   if (filter) {
@@ -405,45 +446,45 @@ window.onload = function createTestRunners() {
     var testURL = 'testcases/' + testName;
 
     var test = createTestRows(testName, testURL);
-    changeTestState(test, States.LOADING);
+    testRunners.unshift(test);
+
+    changeTestState(test, 'LOADING');
 
     document.querySelector('#results').appendChild(test);
     test.querySelector('iframe').contentWindow.onload = function() {
-      changeTestState(this, States.UNSTARTED);
+      changeTestState(this, 'LOADED');
       runTestsIfLoaded();
     }.bind(test);
-
   }
+
 };
 
-var maxParallel = 1;
-
 /**
- * Start as many unstarted tests as possible, wait for results and then post
+ * Start as many loaded tests as possible, wait for results and then post
  * them.
  */
 function runTests() {
-  // Start as many unstarted tests as possible
-  while (unstartedTests.length > 0 && runningTests.length < maxParallel) {
-    // Move from unstarted to running state
-    var test = unstartedTests[0];
-    changeTestState(test, States.RUNNING);
-
-    var testWindow = test.querySelector('iframe').contentWindow;
-    var msg = {'type': 'start', 'url': testWindow.location.href + ''};
-    testWindow.postMessage(msg, '*');
+  // Start a test running
+  if (testStates['LOADED'].length > 0 &&
+        testStates['RUNNING'].length < 1) {
+    changeTestState(testStates['LOADED'][0], 'RUNNING');
   }
 
-  for (var i in runningTests) {
-    var running = runningTests[i];
-    if (now() - running.start > 5000) {
-      // Test has timed out or stuck in some way...
-      changeTestState(running, States.TIMEOUT);
+  // Start a test posting
+  if (testStates['FINISHED'].length > 0 &&
+        testStates['POSTING'].length < 1) {
+    changeTestState(testStates['FINISHED'][0], 'POSTING');
+  }
+
+  // Deal with tests which are taking too long...
+  for (var i in testStates['RUNNING']) {
+    var test = testStates['RUNNING'][i];
+    if (now() - test.start > 5000) {
+      test.results_raw = [];
+      changeTestState(test, 'FINISHED');
     }
   }
 }
-
-var shouldPostResults = true;
 
 /* @type {Object.<string, Object>} */ var testResults = {};
 /**
@@ -460,29 +501,8 @@ window.addEventListener(
     if (evt.data['type'] != 'complete')
        return;
 
-    var result = processResults(test, evt.data['tests']);
-    if (result && shouldPostResults) {
-      // Move from running to posting state
-      changeTestState(test, States.POSTING);
-
-      var data = new FormData();
-      data.append('data', JSON.stringify(result));
-
-      var xhr = new XMLHttpRequest();
-      xhr.onload = function (e) {
-        if (e.target.status >= 400) {
-          shouldPostResults = false;
-        }
-        // Move from running to finished state
-        changeTestState(this, States.FINISHED);
-      }.bind(test);
-      xhr.open('POST', 'test-results-post.html', true);
-      xhr.send(data);
-    } else {
-      // Move directly to finished state
-      changeTestState(test, States.FINISHED);
-    }
-
+    test.results_raw = evt.data['tests'];
+    changeTestState(test, 'FINISHED');
   },
   false);
 
@@ -493,68 +513,57 @@ window.addEventListener(
  * @param {Element} test DOM object representing the test.
  * @param {Array.<Object>} results List of testharness.js result objects.
  */
-function processResults(test, results) {
-  function trueOffsetTop(element) {
-    var t = 0;
-    if (element.offsetParent) {
-      do {
-        t += element.offsetTop;
-      } while (element = element.offsetParent);
-    return [t];
-    }
-  }
-
+function processResults(test) {
   var logElement = test.querySelector('.log');
 
   var newResultsDiv = document.createElement('ul');
-  for (var x in results) {
+  for (var x in test.results_raw) {
     var output = document.createElement('li');
-    output.innerHTML += results[x].name + ' ';
+    output.innerHTML += test.results_raw[x].name + ' ';
 
     var grade = 'fail';
-    if (results[x].status == 0) {
+    if (test.results_raw[x].status == 0) {
       grade = 'pass';
     }
     output.className = grade;
 
     output.innerHTML += grade + ' ';
-    if (results[x].message != null) {
-      output.innerHTML += results[x].message;
+    if (test.results_raw[x].message != null) {
+      output.innerHTML += test.results_raw[x].message;
     }
     newResultsDiv.appendChild(output);
   }
   logElement.appendChild(newResultsDiv);
 
-  if (results.length > 0) {
-    var testResult = {
+  var count = test.querySelector('.count');
+
+  if (test.results_raw.length > 0) {
+    test.results_processed = {
       type: 'result',
       testName: test.id,
-      results: results,
+      results: test.results_raw,
     };
 
-    var passed = results.filter(function(result) {
+    var passed = test.results_raw.filter(function(result) {
       return result.status == 0;
     }).length;
-    var failed = results.length - passed;
+    var failed = test.results_raw.length - passed;
 
     if (!failed) {
       test.className = 'pass';
     } else {
       test.className = 'fail';
-
-      // Open up the window of the failed result
-      test.querySelector('.info-row').click();
-      // Scroll to it.
-      window.scroll(0, trueOffsetTop(test));
     }
 
-    var count = test.querySelector('.count');
-    count.textContent = passed + ' of ' + results.length + ' passed';
-
-    var log = test.querySelector('.log');
-    return testResult;
+    count.textContent = passed + ' of ' + test.results_raw.length + ' passed';
   } else {
+    test.results_processed = {
+      type: 'result',
+      testName: test.id,
+      results: [],
+    };
     test.className = 'no-tests';
+    count.textContent = 'TIMEOUT';
   }
 }
 
