Fixing test-document-timline to actually test something.

--- a/test/testcases/test-document-timeline.html
+++ b/test/testcases/test-document-timeline.html
@@ -21,39 +21,34 @@ limitations under the License.
 <script>
 "use strict";
 
-var usePerformanceTiming =
-    typeof performance === "object" &&
-    typeof performance.timing === "object" &&
-    typeof performance.now === "function";
-
-var clockMillis = function() {
-  return usePerformanceTiming ? performance.now() : Date.now();
-};
-
-function sleep() {
-  var startTime = clockMillis();
-  while (startTime === clockMillis()) {}
-}
-
 // Test that document.timeline.currentTime is read-only.
-timing_test(function() {
-    at(1.0, function() {assert_not_equals(document.timeline.currentTime,  1)});
-  }, "document.timeline.currentTime should be read-only");
+test(function() {
+  try {
+    document.timeline.currentTime = 12345;
+  } catch (e) {
+  }
+  assert_not_equals(document.timeline.currentTime, 12345);
+}, "document.timeline.currentTime should be read-only");
+
+/*
+
+This is wrong according to the spec, timing actually continues to move forward
+even while Javascript is running.
 
 // Test that document.timeline.currentTime is constant within a JavaScript
 // callstack.
 timing_test(function() {
     at(0.0, function() {assert_equals(document.timeline.currentTime, 0.0)});
   }, "document.timeline.currentTime time should be constant in JavaScript callstack");
+*/
 
 // Test that document.timeline.currentTime is non-null in an onload handler
 // when using performance timing. Note that this assumes that web-animations.js
 // is loaded before document load time.
-if (usePerformanceTiming) {
-  addEventListener("load", function() {
-    test(function() {assert_not_equals(document.timeline.currentTime,  null)},
-         "document.timeline.currentTime should be non-null in an onload handler");
-  });
-}
+var loadtest = async_test("document.timeline.currentTime should be non-null in an onload handler");
+addEventListener("load", function() {
+  loadtest.step(function() {assert_not_equals(document.timeline.currentTime,  null)});
+  loadtest.done();
+});
 
 </script>
