Removing some test complexity.
 * Only auto-test-* load check files.
 * Tests are disabled by renaming them to disable-*

--- a/test/testcases/test-getcurrent.html
+++ b/test/testcases/test-getcurrent.html
@@ -35,7 +35,7 @@
 <div id="a" class="ball">A</div>
 <div id="b" class="ball">B</div>
 
-<script src="../bootstrap.js" nochecks></script>
+<script src="../bootstrap.js"></script>
 <script>
 "use strict";
 
