--- a/test/testcases/test-keyframe-composite-operation.html
+++ b/test/testcases/test-keyframe-composite-operation.html
@@ -27,7 +27,7 @@ div#targets div {
 
 <div id="targets"></div>
 
-<script src="../bootstrap.js" nochecks></script>
+<script src="../bootstrap.js"></script>
 <script>
 "use strict";
 
