--- a/test/testcases/disabled-media.html
+++ b/test/testcases/disabled-media.html
@@ -14,6 +14,11 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
+<!--
+Requires the test harness to allow tests to be added after page load. See
+https://github.com/web-animations/web-animations-js/issues/321
+-->
+
 <!DOCTYPE html>
 <style type="text/css">
 video {
