--- a/test/testcases/test-document-timeline.html
+++ b/test/testcases/test-document-timeline.html
@@ -17,7 +17,7 @@ limitations under the License.
 <!DOCTYPE html>
 <div id="anim"></div>
 
-<script src="../bootstrap.js" nochecks></script>
+<script src="../bootstrap.js"></script>
 <script>
 "use strict";
 
