--- a/test/testcases/test-events.html
+++ b/test/testcases/test-events.html
@@ -25,7 +25,7 @@ div.anim {
 }
 </style>
 <div class='anim'></div>
-<script src="../bootstrap.js" nochecks></script>
+<script src="../bootstrap.js"></script>
 <script>
 "use strict";
 var target = document.querySelector('.anim');
