--- a/test/testcases/test-keyframe-animation-effect.html
+++ b/test/testcases/test-keyframe-animation-effect.html
@@ -37,7 +37,7 @@ limitations under the License.
 <div id="anim10" class="anim"></div>
 <div id="anim11" class="anim"></div>
 
-<script src="../bootstrap.js" nochecks></script>
+<script src="../bootstrap.js"></script>
 <script>
 "use strict";
 
