--- a/test/testcases/test-pseudo-element-reference.html
+++ b/test/testcases/test-pseudo-element-reference.html
@@ -22,7 +22,7 @@ limitations under the License.
 }
 </style>
 <body><div id="parent"><div id="child"></div></div>
-<script src="../bootstrap.js" nochecks></script>
+<script src="../bootstrap.js"></script>
 <script>
 'use strict';
 var parent = document.querySelector('#parent');
