--- a/test/testcases/test-update-state.html
+++ b/test/testcases/test-update-state.html
@@ -14,7 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <!DOCTYPE html>
-<script src="../bootstrap.js" nochecks></script>
+<script src="../bootstrap.js"></script>
 <script>
 "use strict";
 
